--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		<p class="app__description">Replay blunders from your own chess games to improve your chess skills!</p>
 		<div class="app__buttons app__buttons--desktop">
 			<a href="https://play.google.com/store/apps/details?id=com.cbt.chess_blunder_trainer" onclick="trackPlayStoreLinkClick('Visit Play Store Android Desktop 1')" class="app__button-play" target="_blank" title="Get on Google Play">
-				<img class="app__badge" src="assets/google-play-badge.png" alt="Get the app on Google Play for Android smartphones">
+				<img class="app__badge" src="assets/google-play-badge.png" alt="Get the app on Google Play for Android">
 			</a>
 			<a href="https://play.google.com/store/apps/details?id=com.cbt.chess_blunder_trainer" onclick="trackPlayStoreLinkClick('Visit Play Store Windows Desktop 1')" class="app__button-play" target="_blank" title="Get on Google Play for Windows">
 				<img class="app__badge" src="assets/Windows_badge.png" alt="Get the app on Google Play for Windows">
@@ -79,7 +79,7 @@
 
 <div class="app__buttons app__buttons--mobile container">
 	<a href="https://play.google.com/store/apps/details?id=com.cbt.chess_blunder_trainer" onclick="trackPlayStoreLinkClick('Visit Play Store Android Mobile 1')" class="app__button-play" target="_blank" title="Get on Google Play">
-		<img class="app__badge" src="assets/google-play-badge.png" alt="Get the app on Google Play for Android smartphones">
+		<img class="app__badge" src="assets/google-play-badge.png" alt="Get the app on Google Play for Android">
 	</a>
 	<a href="https://play.google.com/store/apps/details?id=com.cbt.chess_blunder_trainer" onclick="trackPlayStoreLinkClick('Visit Play Store Windows Mobile 1')" class="app__button-play" target="_blank" title="Get on Google Play for Windows">
 		<img class="app__badge" src="assets/Windows_badge.png" alt="Get the app on Google Play for Windows">
@@ -161,7 +161,7 @@
 
 <div class="app__buttons app__buttons--desktop">
 	<a href="https://play.google.com/store/apps/details?id=com.cbt.chess_blunder_trainer" onclick="trackPlayStoreLinkClick('Visit Play Store Android Desktop 2')" class="app__button-play" target="_blank" title="Get on Google Play">
-		<img class="app__badge" src="assets/google-play-badge.png" alt="Get the app on Google Play for Android smartphones">
+		<img class="app__badge" src="assets/google-play-badge.png" alt="Get the app on Google Play for Android">
 	</a>
 	<a href="https://play.google.com/store/apps/details?id=com.cbt.chess_blunder_trainer" onclick="trackPlayStoreLinkClick('Visit Play Store Windows Desktop 2')" class="app__button-play" target="_blank" title="Get on Google Play for Windows">
 		<img class="app__badge" src="assets/Windows_badge.png" alt="Get the app on Google Play for Windows">
@@ -170,7 +170,7 @@
 
 <div class="app__buttons app__buttons--mobile container">
 	<a href="https://play.google.com/store/apps/details?id=com.cbt.chess_blunder_trainer" onclick="trackPlayStoreLinkClick('Visit Play Store Android Mobile 2')" class="app__button-play" target="_blank" title="Get on Google Play">
-		<img class="app__badge" src="assets/google-play-badge.png" alt="Get the app on Google Play for Android smartphones">
+		<img class="app__badge" src="assets/google-play-badge.png" alt="Get the app on Google Play for Android">
 	</a>
 	<a href="https://play.google.com/store/apps/details?id=com.cbt.chess_blunder_trainer" onclick="trackPlayStoreLinkClick('Visit Play Store Windows Mobile 2')" class="app__button-play" target="_blank" title="Get on Google Play for Windows">
 		<img class="app__badge" src="assets/Windows_badge.png" alt="Get the app on Google Play for Windows">
@@ -209,7 +209,7 @@
 
 <div class="app__buttons app__buttons--desktop">
 	<a href="https://play.google.com/store/apps/details?id=com.cbt.chess_blunder_trainer" onclick="trackPlayStoreLinkClick('Visit Play Store Android Desktop 3')" class="app__button-play" target="_blank" title="Get on Google Play">
-		<img class="app__badge" src="assets/google-play-badge.png" alt="Get the app on Google Play for Android smartphones">
+		<img class="app__badge" src="assets/google-play-badge.png" alt="Get the app on Google Play for Android">
 	</a>
 	<a href="https://play.google.com/store/apps/details?id=com.cbt.chess_blunder_trainer" onclick="trackPlayStoreLinkClick('Visit Play Store Windows Desktop 3')" class="app__button-play" target="_blank" title="Get on Google Play for Windows">
 		<img class="app__badge" src="assets/Windows_badge.png" alt="Get the app on Google Play for Windows">
@@ -218,7 +218,7 @@
 
 <div class="app__buttons app__buttons--mobile container">
 	<a href="https://play.google.com/store/apps/details?id=com.cbt.chess_blunder_trainer" onclick="trackPlayStoreLinkClick('Visit Play Store Android Mobile 3')" class="app__button-play" target="_blank" title="Get on Google Play">
-		<img class="app__badge" src="assets/google-play-badge.png" alt="Get the app on Google Play for Android smartphones">
+		<img class="app__badge" src="assets/google-play-badge.png" alt="Get the app on Google Play for Android">
 	</a>
 	<a href="https://play.google.com/store/apps/details?id=com.cbt.chess_blunder_trainer" onclick="trackPlayStoreLinkClick('Visit Play Store Windows Mobile 3')" class="app__button-play" target="_blank" title="Get on Google Play for Windows">
 		<img class="app__badge" src="assets/Windows_badge.png" alt="Get the app on Google Play for Windows">
