--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 						   class="app__button-play" 
 						   target="_blank" 
 						   title="Get on Google Play">
-						   <strong>Windows via Google Play Games</strong></a>.
+						   <strong>Windows</strong></a>.
 					  </li>
 					<li><strong>Easily import</strong> your <strong>own chess games</strong> from various (online) sources such as chess.com or Lichess, or from your personal PGN files.</li>
 					<li><strong>Replay</strong> your blunders as <strong>personalized puzzles</strong> from your games and train to spot better moves.</li>
