--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 						   target="_blank" 
 						   title="Get on Google Play">
 						   <strong>Android</strong>
-						</a> smartphone or 
+						</a> smartphone or on 
 						<a href="https://play.google.com/store/apps/details?id=com.cbt.chess_blunder_trainer" 
 						   onclick="trackPlayStoreLinkClick('Visit Play Store Windows')" 
 						   class="app__button-play" 
