--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 		<h2 class="app__section-title">Video Introduction</h2>
 		<div class="app__video-wrapper" style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%;">
 			<iframe 
-				src="https://www.youtube.com/embed/zp1AfEO3_W8" 
+				src="https://www.youtube.com/embed/0MftmXmd8QA" 
 				title="Video Introduction to the Chess Blunder Trainer App" 
 				frameborder="0" 
 				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
